--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Jon Dao portfolio">
+    <meta name="keywords" content="coding, gaming, music">
+    <meta name="author" content="Jon Dao">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Jon Dao</title>
 </head>
 <body>
-    <section class="bullets">
-        <ul>
-            <li>👋 Hi, I’m Jon Dao</li>
-            <li>🕹️ I play a lot of fighting games and get beat up online often</li>
-            <li>🧠 I’m learning javascript and react to get my first dev job in 2022</li>
-            <li>🎤 I also make a lot of <a href="https://soundcloud.com/discussionswithdao">bad raps</a> to maintain my mental health</li>
-            <li>📱 Come @ me on <a href="https://twitter.com/commdao">Twitter</a></li>
-        </ul>
-    </section>
+        <main>
+            <h1 class>Jon Dao</h1>
+        </main>
+        
 </body>
 </html>
