--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="coding, gaming, music">
     <meta name="author" content="Jon Dao">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Jon Dao</title>
 </head>
@@ -15,6 +15,24 @@
         <main>
             <h1 class>Jon Dao</h1>
         </main>
-        
+        <!-- <div class="socialbtn">
+            <a class="button" href="https://github.com/commdao">
+                <div class="icon-box-1"></div>
+                <div class="text-box">
+                    <p>GitHub</p>
+                </div>
+            </a>
+            <a class="button" href="https://dev.to/commdao">
+                <div class="icon-box-2"></div>
+                <div class="text-box">
+                    <p>Dev.To</p>
+                </div>
+            </a>
+            <a class="button" href="https://www.twitch.tv/commdao">
+                <div class="icon-box-3"></div>
+                <div class="text-box">
+                    <p>Twitch</p>
+                </div>
+        </div> -->
 </body>
 </html>
