--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Jon Dao portfolio">
     <meta name="keywords" content="coding, gaming, music">
     <meta name="author" content="Jon Dao">
@@ -16,24 +15,19 @@
         <main>
             <h1 class>Jon Dao</h1>
         </main>
-        <!-- <div class="socialbtn">
+        <div class="socialbtn">
             <a class="button" href="https://github.com/commdao">
                 <div class="icon-box-1"></div>
                 <div class="text-box">
-                    <p>GitHub</p>
+                    <p class="social">GitHub</p>
                 </div>
             </a>
             <a class="button" href="https://dev.to/commdao">
                 <div class="icon-box-2"></div>
                 <div class="text-box">
-                    <p>Dev.To</p>
+                    <p class="social">Dev.To</p>
                 </div>
             </a>
-            <a class="button" href="https://www.twitch.tv/commdao">
-                <div class="icon-box-3"></div>
-                <div class="text-box">
-                    <p>Twitch</p>
-                </div>
-        </div> -->
+        </div>
 </body>
 </html>
