--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Jon Dao portfolio">
+    <meta http-equiv="X-UA-Compatible" content="IE=edg    <meta name="description" content="Jon Dao portfolio">
     <meta name="keywords" content="coding, gaming, music">
     <meta name="author" content="Jon Dao">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,20 +13,23 @@
 <body>
         <main>
             <h1 class>Jon Dao</h1>
+            <button class="dark-mode" type="button">Dark</button>
+            <div class="socialbtn">
+                <a class="button" href="https://github.com/commdao">
+                    <div class="icon-box-1"></div>
+                    <div class="text-box">
+                        <p class="social">GitHub</p>
+                    </div>
+                </a>
+                <a class="button" href="https://dev.to/commdao">
+                    <div class="icon-box-2"></div>
+                    <div class="text-box">
+                        <p class="social">Dev.To</p>
+                    </div>
+                </a>
+            </div>
         </main>
-        <div class="socialbtn">
-            <a class="button" href="https://github.com/commdao">
-                <div class="icon-box-1"></div>
-                <div class="text-box">
-                    <p class="social">GitHub</p>
-                </div>
-            </a>
-            <a class="button" href="https://dev.to/commdao">
-                <div class="icon-box-2"></div>
-                <div class="text-box">
-                    <p class="social">Dev.To</p>
-                </div>
-            </a>
-        </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
