landing page revamp

--- a/index.html
+++ b/index.html
@@ -12,22 +12,17 @@
     <title>Jon Dao</title>
 </head>
 <body>
-        <main>
-            <h1 class>Jon Dao</h1>
-        </main>
-        <div class="socialbtn">
-            <a class="button" href="https://github.com/commdao">
-                <div class="icon-box-1"></div>
-                <div class="text-box">
-                    <p class="social">GitHub</p>
-                </div>
-            </a>
-            <a class="button" href="https://dev.to/commdao">
-                <div class="icon-box-2"></div>
-                <div class="text-box">
-                    <p class="social">Dev.To</p>
-                </div>
-            </a>
-        </div>
+        <section>
+            <video src="media/ink.mp4" autoplay loop muted></video>
+            <h1>
+                <span>J</span>
+                <span>O</span>
+                <span>N</span>
+                <span> </span>
+                <span>D</span>
+                <span>A</span>
+                <span>O</span>
+            </h1>
+        </section>
 </body>
 </html>
