added temp navbar and adjusted mobile view

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <title>Jon Dao</title>
 </head>
 <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#projects">PROJECTS</a></li>
+            <li><a href="#about">ABOUT</a></li>
+          </ul>
+        </nav>
+      </header>
         <section>
             <video src="media/ink.mp4" autoplay loop muted></video>
             <h1>
