testing a more simple design

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <section class="bullets">
         <ul>
             <li>👋 Hi, I’m Jon Dao</li>
-            <li>🕹️ I play a lot of fighting games and get beat up online often</li>
-            <li>🧠 I’m learning javascript and react to get my first dev job in 2022</li>
+            <li>🕹️ I suffer defeat in fighting games on a daily basis, but it builds character!</li>
+            <li>🧠 I’m self-taught in JavaScript.</li>
             <li>🎤 I also make a lot of <a href="https://soundcloud.com/discussionswithdao">bad raps</a> to maintain my mental health</li>
-            <li>📱 Come @ me on <a href="https://twitter.com/commdao">Twitter</a></li>
+            <li>📱 I'm not really on social media anymore, but connect through email or <a href="https://www.linkedin.com/in/jondao/">LinkedIn</a></li>
         </ul>
     </section>
 </body>
