making that faux Spotify page

--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <title>Jon Dao</title>
 </head>
 <body>
-    <section class="bullets">
-        <ul>
-            <li>👋 Hi, I’m Jon Dao</li>
-            <li>🕹️ I suffer defeat in fighting games on a daily basis, but it builds character!</li>
-            <li>🧠 I’m self-taught in JavaScript.</li>
-            <li>🎤 I also make a lot of <a href="https://soundcloud.com/discussionswithdao">bad raps</a> to maintain my mental health</li>
-            <li>📱 I'm not really on social media anymore, but connect through email or <a href="https://www.linkedin.com/in/jondao/">LinkedIn</a></li>
-        </ul>
-    </section>
+    <div class="name">
+      <span class="neon-flicker fast">j<span class="neon-flicker">on da</span>o</span>
+    </div>
 </body>
 </html>
