tried compressing and implementing preload code, but still having nonresponsive initial play

--- a/music.html
+++ b/music.html
@@ -35,6 +35,7 @@
             <span class="track-year">Year</span>
             <span class="track-duration"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
         </div>
+        <audio src="media/tracks/1 - Melty Blood Basilica.mp3" preload="auto"></audio>
         <div class="track">
             <span class="track-number">1</span>
             <span class="track-title">Melty Blood Basilica [Type B: 1-2]</span>
