--- a/music.html
+++ b/music.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="music-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <title>BlackJackJonny</title>
 </head>
 <body>
@@ -107,7 +110,9 @@
                 </div>
             </div>
             <div class="volume-container">
-                <span class="volume-icon"><i class="fa fa-volume-up" aria-hidden="true"></i></span>
+                <span class="volume-icon">
+                    <i class="fa fa-volume-up volume-icon" aria-hidden="true"></i>
+                </span>
                 <div class="volume-slider-container">
                     <div class="volume-slider"></div>
                 </div>
