album art now included when playing

--- a/music.html
+++ b/music.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="music-style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <title>BlackJackJonny</title>
 </head>
 <body>
     <div class="spotlight">
-        <img src="media/blackjackjonny.jpg" alt="artist-image">
+        <img src="media/blackjackjonny.jpg" alt="artist-image" class="top-image">
         <div class="bio">
             <h1>BlackJackJonny</h1>
             <p class="details">I have no professional training, but I get lucky with how my ears work sometimes. 
