--- a/index.html
+++ b/index.html
@@ -1,72 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Jon Dao portfolio">
-    <meta name="keywords" content="coding, gaming, music">
-    <meta name="author" content="Jon Dao">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Jon Dao</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav>
-          <ul>
-            <li><a href="#home" id="home-link">HOME</a></li>
-            <li><a href="#projects">PROJECTS</a></li>
-            <li><a href="#about" id="about-link">ABOUT</a></li>
-          </ul>
-        </nav>
-      </header>
-        <section>
-            <video src="media/ink.mp4" autoplay loop muted></video>
-            <h1>
-                <span>J</span>
-                <span>O</span>
-                <span>N</span>
-                <span> </span>
-                <span>D</span>
-                <span>A</span>
-                <span>O</span>
-            </h1>
-            <div class="about">
-              <p>
-              I still might not know what it really means to be me, Jon Dao, but there's
-              a couple of things that keep floating around in my brain:
-              </p>
-              <h2>Music</h2>
-              <p>
-              So, it turns out that I don't listen to music like most people do. Instead of
-              appreciating a song for what it is, I can't help but stack it against what it
-              could/should sound like in my head.
-              </p>
-              <p>
-              Judging people? Problematic! Scheming the potential sounds of a song? An ARTEEST!  
-              </p>
-              <p>
-              Now I'm taking those ideas to learn and turn them into actual remixes, mashups, and arrangements?
-              Maybe I'll start rapping again too...
-              </p>
-              <div class="youtube-wrapper">
-                <iframe width="266.67" height="150" src="https://www.youtube.com/embed/PZRv7hCcGFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              </div>
-            </div>
-        </section>
-        <script>
-          const homeLink = document.getElementById("home-link");
-          const aboutLink = document.getElementById("about-link");
-          const section = document.querySelector("section");
+  <header>
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">JD</div>
+        <div class="menu-toggle">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <ul class="menu">
+          <li><a href="#writing">Writing</a></li>
+          <li><a href="#writing">Music</a></li>
+          <li><a href="#writing">Projects</a></li>
+          <li><a href="#writing">About</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-          homeLink.addEventListener("click", () => {
-            section.classList.remove("active");
-          });
+  <section class="hero">
+    <div class="clouds"></div>
+      <h1>Jon Dao</h1>
+      <p>Storyteller & Composer</p>
+  </section>
 
-          aboutLink.addEventListener("click", () => {
-            section.classList.add("active");
-          });
-        </script>
+  <footer>
+    <div class="container">
+      <ul class="social-links">
+        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <p>Contact: @email.com</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
