trying to add my focus timer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="menu">
           <li><a href="https://www.commdao.com">Writing</a></li>
           <li><a href="#music">Music</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="focus-nau/index.html">Projects</a></li>
           <li><a href="#about">About</a></li>
         </ul>
       </div>
