--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="https://www.commdao.com">Writing</a>
           <a href="#music">Music</a>
-          <a href="#projects">Projects</a>
+          <a href="focus-nau/index.html">Projects</a>
           <a href="#about">About</a>
         </div>
         <ul class="menu">
