--- a/index.html
+++ b/index.html
@@ -38,14 +38,18 @@
     <div class="column">
       <h3>Works</h3><br>
       <p>So, I could dig and pull from a decade back a list of articles I've written that were published. But, they'd all be e-learning, language, or fitness focused. And for the future, that's not the kind of writing I want to do!</p><br>
-      <p>Currently on the docket is submitting to this year's <a href="https://theghoststory.com/tgs-fiction-award">Ghost Story Supernatural Fiction Award</a>, where I'm likely to become a two-time reject. Then, I'll participate in the <a href="https://nanowrimo.org/">2023 NaNoWriMo</a>, where I hope to be a two-time completionist!</p>  
+      <p>Currently on the docket is submitting to this year's <a href="https://theghoststory.com/tgs-fiction-award" target="_blank">Ghost Story Supernatural Fiction Award</a>, where I'm likely to become a two-time reject. Then, I'll participate in the <a href="https://nanowrimo.org/" target="_blank">2023 NaNoWriMo</a>, where I hope to be a two-time completionist!</p>  
     </div>
   </div>
 
   <div id="music" class="content-section" style="display:none;">
     <div class="column">
       <h3>BlackJackJonny</h3><br>
-      <p>I was supposed to learn drums properly in 2022, but I got a bit distracted with music theory and making mashups. As soon as get more original remixes in order, I'll set up a proper Spotify page. In the meantime, <a href="https://beamish-baklava-7e1a30.netlify.app/">I made a mock up</a> with some of my best hits. Choice YouTube playlists below:</p>
+      <p>I was supposed to learn drums properly in 2022, but I got a bit distracted with music theory and making mashups. As soon as get more original remixes in order, I'll set up a proper Spotify page. In the meantime, <a href="https://beamish-baklava-7e1a30.netlify.app/" target="_blank">I made a mock up</a> with some of my best hits.</p> 
+      <div class="preview">
+        <a href="https://github.com/commdao/music-player" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </div>
+      <p>Choice YouTube playlists below:</p>
       <br>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=o64b23czSqfC7eUd&amp;list=PL3rVUkfPR7auMM_RkhZQL16NqRwF-9K7i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
@@ -64,9 +68,9 @@
       </div>
       
       <div class="preview">
-        <a href="https://github.com/commdao/focus-nau"><i class="fa-brands fa-github"></i></a>
-        <a href="https://luxury-puffpuff-61e847.netlify.app/"><i class="fa-solid fa-link"></i></a>
-        <a href="https://luxury-puffpuff-61e847.netlify.app/">
+        <a href="https://github.com/commdao/focus-nau" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://luxury-puffpuff-61e847.netlify.app/" target="_blank"><i class="fa-solid fa-link"></i></a>
+        <a href="https://luxury-puffpuff-61e847.netlify.app/" target="_blank">
           <img src="media/preview_focus_timer.png" alt="focus timer preview">
         </a>
       </div>
@@ -86,9 +90,9 @@
   <footer>
     <div class="footer-container">
       <ul class="social-links">
-        <li><a href="https://twitter.com/CommDao"><i class="fa-brands fa-twitter"></i></a></li>
-        <li><a href="https://www.youtube.com/@blackjackjonny"><i class="fa-brands fa-youtube"></i></a></li>
-        <li><a href="https://github.com/commdao/"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://twitter.com/CommDao" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="https://www.youtube.com/@blackjackjonny" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+        <li><a href="https://github.com/commdao/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
         <li><a id="email-link" href="#"><i class="fas fa-envelope"></i></a></li>
       </ul>
     </div>
