--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:image" content="media/Jon Dao Thumb.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="style.css">
   <title>Jon Dao - Narrative Designer and Music Producer</title>
@@ -19,10 +22,10 @@
           <a href="#">About</a>
         </div>
         <ul class="menu">
-          <li><a href="#writing" onclick="displaySection('writing')">Writing</a></li>
-          <li><a href="#music" onclick="displaySection('music')">Music</a></li>
-          <li><a href="#projects" onclick="displaySection('projects')">Projects</a></li>
-          <li><a href="#about" onclick="displaySection('about')">About</a></li>
+          <li><a href="javascript:void(0);" onclick="displaySection('writing')">Writing</a></li>
+          <li><a href="javascript:void(0);" onclick="displaySection('music')">Music</a></li>
+          <li><a href="javascript:void(0);" onclick="displaySection('projects')">Projects</a></li>
+          <li><a href="javascript:void(0);" onclick="displaySection('about')">About</a></li>
         </ul>
       </div>
     </nav>
