--- a/404.html
+++ b/404.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <style>
         body {
-            background: rgb(54, 21, 98);
+            background: rgb(2,0,36);
+            background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(71,26,128,1) 0%, rgba(92,51,142,1) 45%);
             color: rgba(255, 255, 255, 0.908);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            text-align: center;
             font-size: 2rem;
             font-weight: bold;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
