minor text, css changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <div id="writing" class="content-section" style="display:none;">
     <div class="column">
-      <h3>Works</h3><br>
+      <h3>Written Works</h3><br>
       <p>So, I could dig and pull from a decade back a list of articles I've written that were published. But, they'd all be e-learning, language, or fitness focused. And for the future, that's not the kind of writing I want to do!</p><br>
       <p>Currently on the docket is submitting to this year's <a href="https://theghoststory.com/tgs-fiction-award" target="_blank">Ghost Story Supernatural Fiction Award</a>, where I'm likely to become a two-time reject. Then, I'll participate in the <a href="https://nanowrimo.org/" target="_blank">2023 NaNoWriMo</a>, where I hope to be a two-time completionist!</p>  
     </div>
@@ -61,7 +61,7 @@
 
   <div id="projects" class="content-section" style="display:none;">
       <div class="column">
-        <h3>Focus Nau</h3>
+        <h3>Focus Nau (Focus Timer)</h3>
         <h4>Why Make This?</h4>
         <p>The number one reason being <em>I</em> need it. I can try to block off time in the day to give myself a schedule, but there's no guarantee that those hours set aside will be productive. My brain handles chunks better than blocks, so I've had a lot more success with short bursts using a focus timer.</p>
         <h4>Learning Points</h4>
