--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
       <h3>Jon Dao</h3><br>
       <p>They say you're supposed to code publicly and share your journey along the way.</p><br>
       <p>Whoops. From now on!</p><br>
-      <p>One of those YouTube videos said front-end devs should put a picture of themselves on their site. Do I really?</p><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/yZmf8IjLhG4?si=w9iPC07YlmW3z_r_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <br><p>One tutorial I watched said that front-end devs should put a picture of themselves on their site. My own YouTube video should be enough, yeah?</p><br>
       <p>Site is just HTML, CSS, and vanilla JS for now. React is next.</p>
     </div>
   </div>
@@ -94,7 +95,7 @@
     <div class="footer-container">
       <ul class="social-links">
         <li><a href="https://twitter.com/CommDao" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-        <li><a href="https://www.youtube.com/@blackjackjonny" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+        <li><a href="https://www.youtube.com/@decodingjondao" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
         <li><a href="https://github.com/commdao/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
         <li><a id="email-link" href="#"><i class="fas fa-envelope"></i></a></li>
       </ul>
