--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
     <nav class="navbar">
       <div class="navbar-container">
         <div class="mobile-menu" onclick="toggleMobileMenu()">&#9776; Menu</div>
-        <div class="mobile-menu-content">
-          <a href="#">Writing</a>
-          <a href="#">Music</a>
-          <a href="#">Projects</a>
-          <a href="#">About</a>
-        </div>
-        <ul class="menu">
+        <div id="mobile-menu-content" class="mobile-menu-content"></div>
+        <ul class="menu desktop">
           <li><a href="javascript:void(0);" onclick="displaySection('writing')">Writing</a></li>
           <li><a href="javascript:void(0);" onclick="displaySection('music')">Music</a></li>
           <li><a href="javascript:void(0);" onclick="displaySection('projects')">Projects</a></li>
