cutting code redundancy

--- a/404.html
+++ b/404.html
@@ -4,46 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <style>
-        body {
-            background: rgb(2,0,36);
-            background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(71,26,128,1) 0%, rgba(92,51,142,1) 45%);
-            color: rgba(255, 255, 255, 0.908);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            font-size: 2rem;
-            font-weight: bold;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        h1 {
-            margin-top: 10rem;
-        }
-        p {
-            margin: 1rem;
-        }
-        .fa-solid {
-            margin: 1rem;
-            font-size: 5rem;
-            color: rgb(123, 47, 222);
-            padding: 2rem 2rem;
-        }
-        a {
-            text-decoration: none;
-            color: rgb(43, 244, 43);
-        }
-    </style>
+    <link rel="stylesheet" href="m_style.css">
     <title>Oh Crap, 404?!</title>
 </head>
 <body>
-    <h1>404 - Page Not Found</h1>
-    <p>Even though an error took you here, you're not an error <em>being</em> here.</p>
-    <p>I appreciate you.</p>
-    <i class="fa-solid fa-hands-praying"></i>
-    <p>Okay?</p>
-    <p>...</p>
-    <p>You can <a href="/">go back</a> now.</p>
+    <div class="container">
+        <h1>404</h1>
+        <h2>Page Not Found</h2>
+        <p>Even though an error took you here, you're not an error <em>being</em> here.</p>
+        <p>I appreciate you.</p>
+        <i class="fa-solid fa-hands-praying"></i>
+        <p>Okay?</p>
+        <p>...</p>
+        <p>You can <a href="/">go back</a> now.</p>
+    </div>
 </body>
 </html>
